--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
