--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "docker:test": "./scripts/test-docker.sh"
   },
   "keywords": [
     "ai",
