--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,21 @@
 # Development files
-.next/
 node_modules/
 .env*
 .vscode/
 .idea/
+.ai-todo/
+.claude/
+
+# Build cache (exclude but keep built files)
+.next/cache/
+.next/trace
 
 # Build artifacts
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.tsbuildinfo
 
 # OS generated files
 .DS_Store
@@ -32,12 +38,26 @@ next.config.js
 tsconfig.json
 eslint.config.mjs
 
-# Build output (keep for npm package)
-!.next/standalone/
-!.next/static/
+# Screenshots and archives
+screenshot-*.png
+*.zip
+Archive.zip
 
-# Keep these for npm package
+# Docker files (not needed for npm package)
+.dockerignore
+Dockerfile
+docker-compose.yml
+docker-healthcheck.js
+scripts/
+
+# Keep essential files for npm package
 !bin/
 !package.json
 !README.md
 !LICENSE
+!.next/BUILD_ID
+!.next/*.json
+!.next/*.js
+!.next/server/
+!.next/static/
+!.next/standalone/
